src/test/ui/issues/issue-22599.stderr
error: unused variable: `a`
  --> $DIR/issue-22599.rs:8:19
   |
LL |     v = match 0 { a => 0 };
   |                   ^ help: consider prefixing with an underscore: `_a`
   |
note: lint level defined here
  --> $DIR/issue-22599.rs:1:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

